fix: add margin to mobile contact logo for improved spacing

--- a/src/app/main-component/contact/contact.component.scss
+++ b/src/app/main-component/contact/contact.component.scss
@@ -25,6 +25,7 @@ $accent: #1073EA;
 
 .contact-logo-mobile{
   display: none;
+  margin-right: 25px;
 }
 
 .max-content {
